kube/example-2/echo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels:
    app: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      name: echo
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: kicbase/echo-server:1.0
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
