kube/example-2/echo/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: echo
spec:
  selector:
    app: echo
  ports:
    - port: 8080
